integracion de autentificacion de usuario

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ChatJhoer</title>
-  <script type="module" src="./scrip.js"></script>
+  <script type="module" src="js/main.js" defer></script>
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -16,6 +16,19 @@
       <button type="submit">ENVIAR</button>
     </form>
   </section>
+
+
+  <!-- Un ejemplo simple de formulario -->
+<div id="login-form">
+  <h2>Iniciar Sesión</h2>
+  <input type="text" id="username" placeholder="Nombre de usuario" required />
+  <input type="password" id="password" placeholder="Contraseña" required />
+  <button id="login-button">Iniciar Sesión</button>
+</div>
+
+
+
+
 </body>
 </html>
 
